<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCapmonActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/signup_1_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/HereMessage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_west_white_24dp" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/signup_1_toolbar3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintStart_toEndOf="@+id/backButton"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/capmonCreateTitle"
                app:titleTextColor="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="171dp"
        android:contentDescription="@string/HereMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_1_app_bar_layout"
        app:srcCompat="@drawable/addpicture" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="76dp"
        android:hint="@string/nameTitle"
        android:textColorHint="@color/black_38"
        app:boxBackgroundColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_1_app_bar_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pokemonNameField"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="textEmailSubject" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="275dp"

        android:layout_marginEnd="76dp"
        android:hint="@string/TypeTitle"
        android:textColorHint="@color/black_38"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/typeList"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/space"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="349dp"

        android:layout_marginEnd="76dp"
        android:hint="@string/AttackTitle"
        android:textColorHint="@color/black_38"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/attackList"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/space"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="423dp"

        android:layout_marginEnd="76dp"
        android:hint="@string/RegionTitle"
        android:textColorHint="@color/black_38"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/regionList"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/space"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/red_100"
        android:clickable="true"
        android:contentDescription="@string/HereMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/outline_done_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>